--- a/PgpWordList/PgpWordList.csproj
+++ b/PgpWordList/PgpWordList.csproj
@@ -1,19 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <RootNamespace>Messerli.PgpWordList</RootNamespace>
-        <AssemblyName>Messerli.PgpWordList</AssemblyName>
-    </PropertyGroup>
-    <PropertyGroup>
-        <RepositoryUrl>https://github.com/messerli-informatik-ag/temp-directory</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <PackageId>Messerli.PgpWordList</PackageId>
-        <PackageTags>PGP word list wordlist</PackageTags>
-        <PackageLicenseExpression>MIT OR Apache-2.0</PackageLicenseExpression>
-        <Authors>Dominic Groth</Authors>
-        <Copyright>© Messerli Informatik AG. All rights reserved.</Copyright>
-        <Description>PGP word list and functionality to encode and decode series of PGP words.</Description>
-    </PropertyGroup>
-    <Import Project="..\.paket\Paket.Restore.targets" />
+  <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>Messerli.PgpWordList</RootNamespace>
+    <AssemblyName>Messerli.PgpWordList</AssemblyName>
+  </PropertyGroup>
+  <PropertyGroup>
+    <RepositoryUrl>https://github.com/messerli-informatik-ag/pgp-word-list</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageId>Messerli.PgpWordList</PackageId>
+    <PackageTags>PGP word list wordlist</PackageTags>
+    <PackageLicenseExpression>MIT OR Apache-2.0</PackageLicenseExpression>
+    <Authors>Dominic Groth</Authors>
+    <Copyright>© Messerli Informatik AG. All rights reserved.</Copyright>
+    <Description>PGP word list and functionality to encode and decode series of PGP words.</Description>
+  </PropertyGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
