--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,17 @@
 dist: bionic
 language: csharp
-dotnet: "2.2"
+dotnet: "3.0.100"
 mono: none
 
 env:
   global:
-    - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=1
-    - DOTNET_CLI_TELEMETRY_OPTOUT=1
     - PATH="$PATH:$HOME/.dotnet/tools"
 
 install:
-  - dotnet tool install -g paket
-  - paket install
-  - dotnet restore
+  - dotnet tool restore 
 
 script:
+ - dotnet paket install
+ - dotnet restore
  - dotnet build
  - dotnet test
