--- a/PgpWordList/PgpWordList.csproj
+++ b/PgpWordList/PgpWordList.csproj
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <RootNamespace>Messerli.PgpWordList</RootNamespace>
         <AssemblyName>Messerli.PgpWordList</AssemblyName>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
         <PropertyGroup>
         <RepositoryUrl>https://github.com/messerli-informatik-ag/pgp-word-list</RepositoryUrl>
