--- a/PgpWordList.Test/PgpWordList.Test.csproj
+++ b/PgpWordList.Test/PgpWordList.Test.csproj
@@ -1,10 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
-        <IsPackable>false</IsPackable>
         <RootNamespace>Messerli.PgpWordList.Test</RootNamespace>
         <AssemblyName>Messerli.PgpWordList.Test</AssemblyName>
+    </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <LangVersion>8.0</LangVersion>
+        <Nullable>enable</Nullable>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
     <ItemGroup>
