--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,4 +1,3 @@
 <Project>
-	<Import Project="$(MSBuildThisFileDirectory).config\code-style\Default.targets" />
+	<Import Project="$(MSBuildThisFileDirectory).config/code-style/Default.targets" />
 </Project>
-
