--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,12 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.cs]
+charset = utf-8-bom
+
+[.gitmodules]
+indent_style = tab
+
 [*.{props,sln,targets}]
 indent_style = tab
 end_of_line = crlf
-
