--- a/PgpWordList/PgpWordList.csproj
+++ b/PgpWordList/PgpWordList.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
     <PropertyGroup>
         <Version>0.1.0</Version>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
         <LangVersion>8.0</LangVersion>
         <Nullable>enable</Nullable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
