--- a/PgpWordList.Test/PgpWordList.Test.csproj
+++ b/PgpWordList.Test/PgpWordList.Test.csproj
@@ -14,5 +14,9 @@
     <ItemGroup>
         <ProjectReference Include="..\PgpWordList\PgpWordList.csproj" />
     </ItemGroup>
-    <Import Project="..\.paket\Paket.Restore.targets" />
+    <ItemGroup>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.runner.visualstudio" />
+    </ItemGroup>
 </Project>
