--- a/PgpWordList/PgpWordList.csproj
+++ b/PgpWordList/PgpWordList.csproj
@@ -21,5 +21,7 @@
         <Copyright>© Messerli Informatik AG. All rights reserved.</Copyright>
         <Description>PGP word list and functionality to encode and decode series of PGP words.</Description>
     </PropertyGroup>
-    <Import Project="..\.paket\Paket.Restore.targets" />
+    <ItemGroup>
+        <PackageReference Include="System.Collections.Immutable" />
+    </ItemGroup>
 </Project>
