Update code style

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
 	<ItemGroup>
-		<PackageReference Include="Messerli.CodeStyle" Version="1.0.0" PrivateAssets="all" />
+		<PackageReference Include="Messerli.CodeStyle" PrivateAssets="all" />
 	</ItemGroup>
 </Project>
