--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ install:
   - dotnet tool restore 
 
 script:
- - dotnet paket install
  - dotnet restore
- - dotnet build
- - dotnet test
+ - dotnet build --no-restore
+ - dotnet test --no-restore
