--- a/PgpWordList/PgpWordList.csproj
+++ b/PgpWordList/PgpWordList.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
     <PropertyGroup>
         <Version>0.1.1</Version>
-        <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>netstandard2.1;netstandard2.0;netcoreapp3.1</TargetFrameworks>
         <LangVersion>8.0</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -20,6 +20,6 @@
         <Description>PGP word list and functionality to encode and decode series of PGP words.</Description>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="System.Collections.Immutable" />
+        <PackageReference Include="System.Collections.Immutable" Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'netstandard2.1'" />
     </ItemGroup>
 </Project>
