--- a/PgpWordList/PgpWordList.csproj
+++ b/PgpWordList/PgpWordList.csproj
@@ -19,6 +19,10 @@
         <Copyright>© Messerli Informatik AG. All rights reserved.</Copyright>
         <Description>PGP word list and functionality to encode and decode series of PGP words.</Description>
     </PropertyGroup>
+    <PropertyGroup>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="System.Collections.Immutable" Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'netstandard2.1'" />
     </ItemGroup>
