--- a/PgpWordList.Test/PgpWordList.Test.csproj
+++ b/PgpWordList.Test/PgpWordList.Test.csproj
@@ -5,7 +5,7 @@
         <AssemblyName>Messerli.PgpWordList.Test</AssemblyName>
     </PropertyGroup>
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <LangVersion>8.0</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
