--- a/Packages.props
+++ b/Packages.props
@@ -8,6 +8,7 @@
 	</ItemGroup>
 	<ItemGroup Label="Test dependencies">
 		<PackageReference Update="Funcky.Xunit" Version="[2.0.0, 3)" />
+		<PackageReference Update="FsCheck.Xunit" Version="2.16.5" />
 		<PackageReference Update="Microsoft.NET.Test.Sdk" Version="[15.9.2, 16)" />
 		<PackageReference Update="xunit" Version="[2.4.1, 3)" />
 		<PackageReference Update="xunit.runner.visualstudio" Version="[2.4.1, 3)" />
