--- a/PgpWordList.Test/PgpWordList.Test.csproj
+++ b/PgpWordList.Test/PgpWordList.Test.csproj
@@ -13,7 +13,8 @@
         <ProjectReference Include="..\PgpWordList\PgpWordList.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Funcky.xunit" />
+        <PackageReference Include="Funcky.Xunit" />
+        <PackageReference Include="FsCheck.Xunit" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="xunit" />
         <PackageReference Include="xunit.runner.visualstudio" />
